feat: quiz tab and custom headers to support quiz
Signed-off-by: Harshal Chaudhari <harshal.chaudhary@gmail.com>

--- a/config.toml
+++ b/config.toml
@@ -68,6 +68,11 @@ name = "Tags"
 url = "/tags"
 weight = 5
 
+[[menu.main]]
+name = "Quiz"
+url = "/quiz"
+weight = 7
+
 [[params.social]]
 name = "Github"
 icon = "github"
